# Evidence-Vault

./: CMakeLists.txt
.github/: copilot-instructions.md
config/: config.json
include/: ConfigManager.h  DatabaseManager.h  Evidence.h  Exceptions.h  FileManager.h  HashGenerator.h  MetadataExtractor.h  sqlite3.h
src/: ConfigManager.cpp  DatabaseManager.cpp  Evidence.cpp  FileManager.cpp  HashGenerator.cpp  MetadataExtractor.cpp  main.cpp  sqlite3_stub.cpp
